--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@v1
         with:
           target: riscv32imc-unknown-none-elf
-          toolchain: nightly-2023-03-09
+          toolchain: nightly
           components: rust-src
       - uses: esp-rs/xtensa-toolchain@v1.5
         with:
@@ -41,11 +41,11 @@ jobs:
 
       # Check all RISC-V targets:
       - name: check (esp32c3)
-        run: cd esp-hal-smartled/ && cargo +nightly-2023-03-09 check --features=esp32c3
+        run: cd esp-hal-smartled/ && cargo +nightly check --features=esp32c3
       - name: check (esp32c6)
-        run: cd esp-hal-smartled/ && cargo +nightly-2023-03-09 check --features=esp32c6
+        run: cd esp-hal-smartled/ && cargo +nightly check --features=esp32c6
       # - name: check (esp32h2)
-      #   run: cd esp-hal-smartled/ && cargo +nightly-2023-03-09 check --features=esp32h2
+      #   run: cd esp-hal-smartled/ && cargo +nightly check --features=esp32h2
       # Check all Xtensa targets:
       - name: check (esp32)
         run: cd esp-hal-smartled/ && cargo +esp check --features=esp32,esp32_40mhz
@@ -91,7 +91,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@v1
         with:
           target: riscv32imc-unknown-none-elf
-          toolchain: nightly-2023-03-09
+          toolchain: nightly
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
@@ -106,17 +106,17 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32c2-hal (common features)
-        run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --examples --features=eh1,ufmt
+        run: cd esp32c2-hal/ && cargo +nightly check --examples --features=eh1,ufmt
       - name: check esp32c2-hal (async, systick)
-        run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-systick
+        run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c2-hal (async, timg0)
-        run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-timg0
+        run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-timg0
       - name: check esp32c2-hal (async, gpio)
-        run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
+        run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_wait --features=embassy,embassy-time-systick,async
       - name: check esp32c2-hal (async, spi)
-        run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
+        run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_spi --features=embassy,embassy-time-systick,async
       - name: check esp32c2-hal (async, serial)
-        run: cd esp32c2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_serial --features=embassy,embassy-time-systick,async
+        run: cd esp32c2-hal/ && cargo +nightly check --example=embassy_serial --features=embassy,embassy-time-systick,async
 
   esp32c3-hal:
     runs-on: ubuntu-latest
@@ -126,7 +126,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@v1
         with:
           target: riscv32imc-unknown-none-elf
-          toolchain: nightly-2023-03-09
+          toolchain: nightly
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
@@ -135,25 +135,25 @@ jobs:
       # We also use this as an opportunity to verify that the examples link
       # for each supported image format.
       - name: build esp32c3-hal (no features)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 build --examples
+        run: cd esp32c3-hal/ && cargo +nightly build --examples
       - name: build esp32c3-hal (direct-boot)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 build --examples --features=direct-boot
+        run: cd esp32c3-hal/ && cargo +nightly build --examples --features=direct-boot
       - name: build esp32c3-hal (mcu-boot)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 build --examples --features=mcu-boot
+        run: cd esp32c3-hal/ && cargo +nightly build --examples --features=mcu-boot
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32c3-hal (common features)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 check --examples --features=eh1,ufmt
+        run: cd esp32c3-hal/ && cargo +nightly check --examples --features=eh1,ufmt
       - name: check esp32c3-hal (async, systick)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-systick
+        run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-timg0
+        run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-timg0
       - name: check esp32c3-hal (async, gpio)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
+        run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_wait --features=embassy,embassy-time-systick,async
       - name: check esp32c3-hal (async, spi)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
+        run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_spi --features=embassy,embassy-time-systick,async
       - name: check esp32c3-hal (async, serial)
-        run: cd esp32c3-hal/ && cargo +nightly-2023-03-09 check --example=embassy_serial --features=embassy,embassy-time-systick,async
+        run: cd esp32c3-hal/ && cargo +nightly check --example=embassy_serial --features=embassy,embassy-time-systick,async
 
   esp32c6-hal:
     runs-on: ubuntu-latest
@@ -163,7 +163,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@v1
         with:
           target: riscv32imac-unknown-none-elf
-          toolchain: nightly-2023-03-09
+          toolchain: nightly
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
@@ -172,23 +172,23 @@ jobs:
       # We also use this as an opportunity to verify that the examples link
       # for each supported image format.
       - name: build esp32c6-hal (no features)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 build --examples
+        run: cd esp32c6-hal/ && cargo +nightly build --examples
       - name: build esp32c6-hal (direct-boot)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 build --examples --features=direct-boot
+        run: cd esp32c6-hal/ && cargo +nightly build --examples --features=direct-boot
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32c6-hal (common features)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --examples --features=eh1,ufmt
+        run: cd esp32c6-hal/ && cargo +nightly check --examples --features=eh1,ufmt
       - name: check esp32c6-hal (async, systick)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-systick
+        run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c6-hal (async, timg0)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-timg0
+        run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-timg0
       - name: check esp32c6-hal (async, gpio)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
+        run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_wait --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (async, spi)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
+        run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_spi --features=embassy,embassy-time-systick,async
       - name: check esp32c6-hal (async, serial)
-        run: cd esp32c6-hal/ && cargo +nightly-2023-03-09 check --example=embassy_serial --features=embassy,embassy-time-systick,async
+        run: cd esp32c6-hal/ && cargo +nightly check --example=embassy_serial --features=embassy,embassy-time-systick,async
 
   esp32h2-hal:
     runs-on: ubuntu-latest
@@ -198,7 +198,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@v1
         with:
           target: riscv32imac-unknown-none-elf
-          toolchain: nightly-2023-03-09
+          toolchain: nightly
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
@@ -207,21 +207,21 @@ jobs:
       # We also use this as an opportunity to verify that the examples link
       # for each supported image format.
       - name: build esp32h2-hal (no features)
-        run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples
+        run: cd esp32h2-hal/ && cargo +nightly build --examples
       # - name: build esp32h2-hal (direct-boot)
-      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples --features=direct-boot
+      #   run: cd esp32h2-hal/ && cargo +nightly build --examples --features=direct-boot
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32h2-hal (common features)
-        run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --examples --features=eh1,ufmt
+        run: cd esp32h2-hal/ && cargo +nightly check --examples --features=eh1,ufmt
       # - name: check esp32h2-hal (async, systick)
-      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-systick
+      #   run: cd esp32h2-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-systick
       # - name: check esp32h2-hal (async, timg0)
-      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_hello_world --features=embassy,embassy-time-timg0
+      #   run: cd esp32h2-hal/ && cargo +nightly check --example=embassy_hello_world --features=embassy,embassy-time-timg0
       # - name: check esp32h2-hal (async, gpio)
-      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_wait --features=embassy,embassy-time-systick,async
+      #   run: cd esp32h2-hal/ && cargo +nightly check --example=embassy_wait --features=embassy,embassy-time-systick,async
       # - name: check esp32h2-hal (async, spi)
-      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 check --example=embassy_spi --features=embassy,embassy-time-systick,async
+      #   run: cd esp32h2-hal/ && cargo +nightly check --example=embassy_spi --features=embassy,embassy-time-systick,async
 
   esp32s2-hal:
     runs-on: ubuntu-latest
