feat?(riscv): align misc options (LTO, opt-level)
As with the prior change, the problem we're solving here is shrinking
the state space: there are many branch points within the optmization
machinery, and these settings align with what I've been looking at most
thoroughly.

NB: I have no idea what effect, if any, the Cargo.toml settings have on
downstream crates. Forcing frame pointers in `.cargo/config.toml`
definitely has no effect.

--- a/esp32c3-hal/.cargo/config.toml
+++ b/esp32c3-hal/.cargo/config.toml
@@ -2,6 +2,7 @@
 runner = "espflash flash --monitor"
 rustflags = [
   "-C", "link-arg=-Tlinkall.x",
+  "-C", "force-frame-pointers",
 
   # comment the cfgs below if you do _not_ wish to emulate atomics.
   # enable the atomic codegen option for RISCV
