--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -60,6 +60,7 @@ async                = ["esp-hal-common/async", "embedded-hal-async"]
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0   = ["esp-hal-common/embassy-time-timg0",   "embassy-time/tick-hz-1_000_000"]
+interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
 
 [[example]]
 name              = "embassy_hello_world"
@@ -68,3 +69,7 @@ required-features = ["embassy"]
 [[example]]
 name              = "embassy_i2c"
 required-features = ["embassy", "async", "embassy-time-systick"]
+
+[[example]]
+name              = "interrupt_preemption"
+required-features = ["interrupt-preemption"]
