esp32s3-hal: examples: Include all cfg features dependencies for examples

--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -80,24 +80,24 @@ required-features = ["eh1"]
 
 [[example]]
 name              = "embassy_hello_world"
-required-features = ["embassy"]
+required-features = ["embassy", "embassy-time-timg0"]
 
 [[example]]
 name              = "embassy_wait"
-required-features = ["embassy", "async"]
+required-features = ["async", "embassy", "embassy-time-timg0"]
 
 [[example]]
 name              = "embassy_spi"
-required-features = ["embassy", "async"]
+required-features = ["async", "embassy", "embassy-time-timg0"]
 
 [[example]]
 name              = "psram"
 required-features = ["psram_2m"]
 
 [[example]]
-name              = "embassy_serial"
-required-features = ["embassy", "async"]
+name              = "embassy_i2c"
+required-features = ["async", "embassy", "embassy-time-timg0"]
 
 [[example]]
-name              = "embassy_i2c"
-required-features = ["embassy", "async"]
+name              = "embassy_serial"
+required-features = ["async", "embassy", "embassy-time-timg0"]
