--- a/esp-hal-smartled/Cargo.toml
+++ b/esp-hal-smartled/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
-name        = "esp-hal-smartled"
-version     = "0.3.0"
-edition     = "2021"
-description = "RMT adapter for smartleds"
-repository  = "https://github.com/esp-rs/esp-hal"
-license     = "MIT OR Apache-2.0"
+name         = "esp-hal-smartled"
+version      = "0.4.0"
+edition      = "2021"
+rust-version = "1.65.0"
+description  = "RMT adapter for smartleds"
+repository   = "https://github.com/esp-rs/esp-hal"
+license      = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
 features = ["esp32c3"]
 
 [dependencies]
-esp-hal-common   = { version = "0.10.0", path = "../esp-hal-common" }
+esp-hal-common   = { version = "0.11.0", path = "../esp-hal-common" }
 fugit            = "0.3.7"
 smart-leds-trait = "0.2.1"
 
