Create the `esp32c6-lp-hal` package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -229,6 +229,26 @@ jobs:
       - name: rustdoc
         run: cd esp32c6-hal/ && cargo doc --features=eh1
 
+  esp32c6-lp-hal:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          target: riscv32imac-unknown-none-elf
+          toolchain: nightly
+          components: rust-src
+      - uses: Swatinem/rust-cache@v2
+
+      # Perform a full build initially to verify that the examples not only
+      # build, but also link successfully.
+      - name: build esp32c6-lp-hal (no features)
+        run: cd esp32c6-lp-hal/ && cargo +nightly build --examples
+      # Ensure documentation can be built
+      - name: rustdoc
+        run: cd esp32c6-lp-hal/ && cargo doc
+
   esp32h2-hal:
     runs-on: ubuntu-latest
 
@@ -393,6 +413,8 @@ jobs:
         run: cd esp32c3-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32c6-hal)
         run: cd esp32c6-hal/ && cargo check --features=eh1,ufmt
+      - name: msrv (esp32c6-lp-hal)
+        run: cd esp32c6-lp-hal/ && cargo check
       - name: msrv (esp32h2-hal)
         run: cd esp32h2-hal/ && cargo check --features=eh1,ufmt
 
@@ -438,6 +460,8 @@ jobs:
         run: cargo +stable clippy --manifest-path=esp32c3-hal/Cargo.toml -- --no-deps
       - name: clippy (esp32c6-hal)
         run: cargo +stable clippy --manifest-path=esp32c6-hal/Cargo.toml -- --no-deps
+      - name: clippy (esp32c6-lp-hal)
+        run: cargo +stable clippy --manifest-path=esp32c6-lp-hal/Cargo.toml -- --no-deps
       - name: clippy (esp32h2-hal)
         run: cargo +stable clippy --manifest-path=esp32h2-hal/Cargo.toml -- --no-deps
 
@@ -494,6 +518,8 @@ jobs:
         run: cargo fmt --all --manifest-path=esp32c3-hal/Cargo.toml -- --check
       - name: rustfmt (esp32c6-hal)
         run: cargo fmt --all --manifest-path=esp32c6-hal/Cargo.toml -- --check
+      - name: rustfmt (esp32c6-lp-hal)
+        run: cargo fmt --all --manifest-path=esp32c6-lp-hal/Cargo.toml -- --check
       - name: rustfmt (esp32h2-hal)
         run: cargo fmt --all --manifest-path=esp32h2-hal/Cargo.toml -- --check
       - name: rustfmt (esp32s2-hal)
@@ -505,14 +531,13 @@ jobs:
   # Changelog
 
   changelog:
-    name: Changelog
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Check that changelog updated
-        uses: dangoslen/changelog-enforcer@v3
+      - uses: dangoslen/changelog-enforcer@v3
         with:
           changeLogPath: CHANGELOG.md
           skipLabels: "skip-changelog"
