Add more configuration options (#234)
* Add more configuration options

* Remove obsolete mtu feature

* Simplify DEFAULT_HEAP_SIZE

--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -35,7 +35,7 @@ embassy-net-driver = { workspace = true, optional = true }
 toml-cfg.workspace = true
 
 [features]
-default = [ "utils", "mtu-1492" ]
+default = [ "utils" ]
 
 # chip features
 esp32c3 = [ "esp32c3-hal", "dep:esp32c3", "esp-wifi-sys/esp32c3", "esp-hal-common/esp32c3" ]
@@ -73,8 +73,4 @@ phy-enable-usb = []
 ps-min-modem = []
 esp-now = [ "wifi" ]
 big-heap = []
-mtu-1514 = []
-mtu-1500 = []
-mtu-1492 = []
-mtu-746 = []
 ipv6 = ["smoltcp?/proto-ipv6"]
