--- a/esp32c6-lp-hal/.cargo/config.toml
+++ b/esp32c6-lp-hal/.cargo/config.toml
@@ -1,7 +1,7 @@
 [target.riscv32imac-unknown-none-elf]
 runner = "espflash flash --monitor"
 rustflags = [
-  "-C", "link-arg=-Tlinkall.x",
+  "-C", "link-arg=-Tlink.x",
 ]
 
 [build]
